feat() : correction de code